--- a/app/src/main/res/layout/layout_dangky.xml
+++ b/app/src/main/res/layout/layout_dangky.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/backgroundtransparentGray">
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/txtTieuDeDangKy"
